Remove deprecated method uses